--- a/src/assets/scss/basics/_base.scss
+++ b/src/assets/scss/basics/_base.scss
@@ -11,8 +11,9 @@ html {
 body {
   margin: 0;
   min-height: 100vh;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
-    "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -48,6 +49,39 @@ button {
   * {
     pointer-events: none;
   }
+}
+
+.d-btn {
+  background-color: #25d365;
+  border-radius: 8px;
+  border: 1px solid #18ab29;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 16px;
+  padding: 0.24rem;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #2f6627;
+}
+.d-btn:hover {
+  background-color: #dafdd3;
+}
+
+.l-btn {
+  background-color: #dafdd3;
+  border-radius: 8px;
+  border: 1px solid #18ab29;
+  display: inline-block;
+  cursor: pointer;
+  color: #000;
+  font-family: Arial;
+  font-size: 16px;
+  text-decoration: none;
+  padding: 0.25rem;
+}
+.l-btn:hover {
+  background-color: #c4f4bb;
 }
 
 input {
