--- a/src/assets/scss/cmps/_app-header.scss
+++ b/src/assets/scss/cmps/_app-header.scss
@@ -9,7 +9,7 @@
       font-family: cursive;
       display: none;
       @media (min-width: 500px) {
-        display: block;
+        display: flex;
       }
     }
     display: flex;
