--- a/src/assets/scss/cmps/_app-header.scss
+++ b/src/assets/scss/cmps/_app-header.scss
@@ -8,6 +8,7 @@
       font-weight: 600;
       font-family: cursive;
       display: none;
+      cursor: pointer;
       @media (min-width: 500px) {
         display: flex;
       }
